tests/codegen/compile/view/fail/element_self_closing_field.rs
use rust_liveview::view::Element;

fn main() {}

#[derive(Debug, Element)]
struct EnumElement {
    #[element(self_closing)]
    test: bool,
}
